Tue Jul 20 03:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inetssl.mpb:
        * protocols/ace/INet/inet_ssl.mpb:
          Fuzz fixes.

Mon Jul 19 11:50:59 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * ace/TSS_T.inl:
        * ace/TSS_T.h:
        * ace/TSS_T.cpp:
          Mostly fixed bug 3539. It doesn't fix a case when main thread
          doesn't own ACE_TSS but still uses it. Fixing the later is not
          straight forward and will require a lot more efforts.
          Also rearranged the code so that it has less duplicates.

        * tests/run_test.lst:
          Marked the test as fixed.

Mon Jul 19 09:15:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/config/inet.mpb:
        * bin/MakeProjectCreator/config/global.features:
        * protocols/ace/INet/inet.mpc:
          Added new feature 'exclude_inet' to allow builds to
          explicitly exclude building INet.

Mon Jul 19 08:49:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/HTTPS_Session.cpp:
        * protocols/ace/INet/HTTPS_Session.h:
          Fixed compile errors byadding version check to disable
          'relatively' new OpenSSL functionality for builds using
          outdated OpenSSL installations (OpenSSL <= 0.9.8e).

Sat Jul 17 14:06:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/ClientRequestHandler.h:
        * protocols/ace/INet/URLBase.h:
          Some include shuffling to fix an incomplete type warning
          with MSVC.

Sat Jul 17 11:39:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/inet_ssl.mpb:
          Replaced ace_openssl base project by ssl. Fixes missing
          ACE_SSL lib link errors.

        * protocols/ace/INet/SSL_CallbackManager.cpp:
          Fixed MSVC compile errors.

Sat Jul 17 10:26:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
